# finox

./: .gitignore  .rubocop.yml  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE-THIRD-PARTY.txt  README.md  Rakefile  about.hbs  about.toml  finox.gemspec
.github/workflows/: cross-gem.yml  main.yml
ext/finox/: Cargo.toml  extconf.rb
ext/finox/src/: lib.rs
lib/: finox.rb
lib/finox/: version.rb
spec/: finox_spec.rb  spec_helper.rb
