[package]
name = "finox"
version = "0.2.0"
edition = "2021"
authors = ["kyuuri1791"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
serde_json = { version = "1", features = ["preserve_order"] }
sqlparser = { version = "0.62.0", features = ["serde", "visitor"] }
twox-hash = { version = "2.1", default-features = false, features = ["xxhash64"] }
